# paradigms

./: .gitignore
C/lab2/: lab2.c
C/lab3/: 3  lab3.c
C/lab3/vineyard-code/: seaShells.c  str  stringArray.c
C/lab4/: c  compare.c  l  lex.c  s  test.txt
Haskell/final/: 4.txt  5.txt  6.txt  KenKen  KenKen.hs  grids  ken.hs  misc.hs  out.txt  tmp.txt
Haskell/lab1/: in.txt  lab1.hs  read.hs
Haskell/lab2/: Main.hs  SawBoards.hs  in.txt  out.txt
Haskell/lab2/func_testing/: tst.hs
Haskell/lab3/: Strings.hi  Strings.hs  bee.txt  ns.txt  num.txt  out.txt  pana.txt
Haskell/lab3/noFancyFormat/: Strings.hs  lab3.hs  out.txt
lab3/: 3  in.txt  lab3.c  n  ni.c
lab4/: CMakeLists.txt  c  commands.txt  compare.c  compare.out  dict.txt  l  lex.c  lex.out  s  spellCheck.c  spellCheck.out  test.txt
lab4/final/: lab4.tar  lex.c  test.txt
lab4/nick-code/: compare.c  l  lex.c  s  spellCheck.c
lab4/other-code/: compare.c  compare.out  lex.out  spellCheck.c
prev-paradigms-code/C/: cat1.c  compare.c  exp.c  exp2.c  exp3.c  hello.txt  hello2.txt  lex.c  palindrome.c  sort.txt  spellCheckLex.c  spellCheckS.c  spellCheckSU.c  test.c  thing.c
prev-paradigms-code/Haskell/EvilHangman/: hang.hs
prev-paradigms-code/Haskell/Misc/: BinSrchTree.hs  Main.hs  dataType.hs  fib.hs  maybe.hs  tri1.hs  tri2.hs  tuple.hs
prev-paradigms-code/Haskell/SpellCheck/: hello.txt  tp.hs
